--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
+
+/*Tamanhos para mosquiros aleatorios*/
+/*Tamanho 1*/
 .mosquito1{
     width: 50px;
     height: 50px;
+}
+/*Tamanho 2*/
+.mosquito2{
+    width: 70px;
+    height: 70px;
+}
+/*Tamanho 3*/
+.mosquito3{
+    width: 90px;
+    height: 90px;
 }
