--- a/projetoWeb10-GameMataMosquito/css/style.css
+++ b/projetoWeb10-GameMataMosquito/css/style.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-image: url(bg.jpg);
+    background-image: url(../img/bg.jpg);
     background-repeat: no-repeat;
 }
 /*Tamanhos para mosquiros aleatorios*/
