Arrumando bug do fundo

--- a/projetoWeb10-GameMataMosquito/css/style.css
+++ b/projetoWeb10-GameMataMosquito/css/style.css
@@ -3,6 +3,7 @@
 body{
     background-image: url(../img/bg.jpg);
     background-repeat: no-repeat;
+    background-size: 100%;
 }
 /*Tamanhos para mosquiros aleatorios*/
 /*Tamanho 1*/
