--- a/projetoWeb10-GameMataMosquito/css/style.css
+++ b/projetoWeb10-GameMataMosquito/css/style.css
@@ -1,4 +1,8 @@
 
+/*ajustando cursor da pagina*/
+html{
+    cursor: url(../img/mata_mosca.png) 30 30, auto;
+}
 
 body{
     background-image: url(../img/bg.jpg);
@@ -55,3 +59,5 @@ body{
     font-size: 20px;
     font-weight: bold;
 }
+
+
